@@ -111,14 +111,6 @@ class GradleExecuterBackedSession implements GradleSession {
             executer.requireDaemon()
         }
 
-        if (executer.isUseDaemon()) {
-            executer.withCommandLineGradleOpts(PerformanceTestJvmOptions.createDaemonClientJvmOptions())
-        } else {
-            // optimize for fast startup time when there is no daemon
-            // also enable Class Data Sharing (cds) when it's a non-daemon JVM
-            executer.withBuildJvmOpts(['-Xverify:none', '-Xshare:auto'])
-        }
-
         // must make a copy of argument for executer to use for stopping since arguments must match when stopping the daemons
         // executer instance's reset method gets called after execution and the arguments aren't preserved there
         if (executerForStopping == null) {
